--- a/index.html
+++ b/index.html
@@ -77,14 +77,25 @@
         </div>
       </nav>
     </header>
-
     <main>
       <section class="container-fluid text-center">
-        <h1 class="mt-5">Trabajo Práctico N°5 - Punto 5</h1>
-        
+        <h1 class="my-5">Trabajo Práctico N°5 - Punto 5</h1>
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+            <div
+              class="col-lg-12 col-md-12 bg-dark-subtle p-2 text-center cronometro"
+            >
+              <h2 class="display-1">Prueba</h2>
+            </div>
+            <div class="col-lg-12 col-md-12 my-3">
+              <button class="btn btn-outline-success">Iniciar</button>
+              <button class="btn btn-outline-warning">Pausar</button>
+              <button class="btn btn-outline-danger">Reiniciar</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
-
     <footer class="bg-dark-subtle py-4 text-light text-center">
       <p>&copy; Todos los derechos reservados</p>
     </footer>
