--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div
               class="col-lg-12 col-md-12 bg-dark-subtle p-2 text-center cronometro"
             >
-              <h2 class="display-1">Prueba</h2>
+              <h2 class="display-1"></h2>
             </div>
             <div class="col-lg-12 col-md-12 my-3">
               <button class="btn btn-outline-success">Iniciar</button>
